# paris-sportif

./: .env.example  .envrc  .gitignore  .mcp.json  API_ARCHITECTURE.md  AUTHENTICATION_EPIC_TICKETS.md  AUTH_EPIC_SUMMARY.md  AUTH_IMPLEMENTATION_CHECKLIST.md  CHECKLIST_FINAL.md  CLAUDE.md  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_CHECKLIST.md  INTEGRATION_EXAMPLE.md  MATCH_PAGE_IMPLEMENTATION.md  Makefile  NOTION_IMPORT_GUIDE.md  PREDICTIONS_API_EXAMPLES.md  PREDICTIONS_IMPROVEMENTS.md  PREDICTIONS_MOCK_RESPONSES.md  QUICKSTART_FIXES.md  QUICK_START.md  README.md  README_AUTH_TICKETS.md  SUMMARY.txt  TICKETS.md  USAGE_EXAMPLES.md  auth_tickets.csv  database_migrations_auth.sql  docker-compose.yml  package-lock.json  package.json  render.yaml
.claude/: settings.json  settings.local.json
.claude/commands/: auto-implement.md  backlog.md  done.md  fix-suggestions.md  implement.md  review-and-fix.md  ticket.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  backup-database.yml  ci.yml  frontend-ci.yml
backend/: .env.example  .pre-commit-config.yaml  CHANGES_SUMMARY.md  COMPLETION_CHECKLIST.md  Dockerfile  FIX_MATCHES_ID.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_DETAILS.md  IMPROVEMENT_SUMMARY.md  ML_IMPLEMENTATION_SUMMARY.md  ML_MODELS_GUIDE.md  PREDICTION_ENGINE_IMPROVEMENTS.md  QUICK_START.md  RAG_ENDPOINT_FIX.md  README.md  TESTING_IMPROVEMENTS.md  alembic.ini  fix_matches_sequence.sql  gunicorn.conf.py  pyproject.toml  render.yaml  verify_rag_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 2c4daf5ea9d7_initial_schema.py  438d0fd7a51a_add_tennis_models.py  530842cf7be0_add_basketball_models.py  a1b2c3d4e5f6_add_daily_picks_columns.py
backend/docs/: PREDICTION_MODELS.md
backend/migrations/: 001_hotfix_schema.sql  002_verify_and_create_all_tables.sql  003_add_team_form_columns.sql  004_add_favorite_team_id.sql
backend/scripts/: fix_db_sequence.py
backend/src/: __init__.py  scheduler.py
backend/src/api/: main.py  schemas.py
backend/src/api/routes/: admin.py  basketball.py  bets.py  dashboard.py  debug.py  enrichment.py  favorites.py  health.py  matches.py  ml.py  notifications.py  predictions.py  prompts.py  rag.py  search.py  stripe.py  sync.py  tennis.py  testimonials.py  users.py  vector.py
backend/src/auth/: __init__.py  dependencies.py  responses.py  supabase_auth.py
backend/src/core/: cache.py  config.py  constants.py  exceptions.py  http_client.py  logging_config.py  messages.py  rate_limit.py  sentry.py
backend/src/data/: data_enrichment.py  database.py  fatigue_service.py  odds_client.py  quality_monitor.py
backend/src/data/sources/: api_sports_nba.py  football_data.py  sportdevs_tennis.py  understat.py
backend/src/db/: __init__.py  database.py  models.py
backend/src/db/repositories/: __init__.py  base.py  match_repository.py  ml_model_repository.py  prediction_repository.py  standing_repository.py  sync_repository.py  team_repository.py  unit_of_work.py  user_repository.py
backend/src/db/services/: __init__.py  match_service.py  prediction_service.py  stats_service.py  user_service.py
backend/src/llm/: adjustments.py  client.py  entity_extraction.py  prompt_versioning.py  prompts.py  prompts_advanced.py
backend/src/llm/tasks/: __init__.py  explanation.py
backend/src/ml/: __init__.py  data_collector.py  huggingface_client.py  model_loader.py  pipeline.py  trainer.py  trainer_extended.py
backend/src/ml/data/: historical_matches.json
backend/src/ml/trained_models/: feature_engineer_state.pkl  random_forest_latest.pkl  xgboost_latest.pkl
backend/src/notifications/: __init__.py  alert_scheduler.py  push_service.py
backend/src/prediction_engine/: adaptive_weights.py  backtesting.py  basketball_ensemble.py  basketball_predictor.py  calibration.py  ensemble.py  ensemble_advanced.py  examples.py  explainability.py  feature_engineering.py  model_trainer.py  multi_markets.py  rag_enrichment.py  tennis_ensemble.py  tennis_predictor.py
backend/src/prediction_engine/models/: __init__.py  dixon_coles.py  elo.py  elo_advanced.py  poisson.py  random_forest_model.py  xgboost_model.py
backend/src/services/: cache_service.py  data_prefill_service.py  nba_sync_service.py  stripe_service.py  supabase_admin_service.py  tennis_sync_service.py
backend/src/vector/: __init__.py  embeddings.py  news_indexer.py  news_ingestion.py  qdrant_store.py  search.py
backend/tests/: __init__.py  conftest.py  test_adaptive_weights.py  test_calibration.py  test_explainability.py  test_health.py  test_injury_parser.py  test_matches.py  test_models.py  test_predictions.py  test_prompt_versioning.py  test_quality_monitor.py  test_rag_enrichment.py  test_rate_limit.py
docs/: ARCHITECTURE.md  AUDIT_SUMMARY.md  CLAUDE_AGENTS.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  GIT_WORKFLOW.md  MCP_AGENTS.md  ORVAL_API.md  RENDER_AUDIT_REPORT.md  RUNBOOK.md  TICKETS_AUTH_ROLES.md  WORKFLOWS.md
frontend/: .dockerignore  .env.example  .env.local.example  CHANGES_SUMMARY.txt  COMPONENT_GUIDE.md  DARK_MODE_IMPLEMENTATION.md  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.dev  FILES_OVERVIEW.md  GETTING_STARTED_MOCK.md  IMPLEMENTATION_SUMMARY.md  MATCH_DETAIL_VISUAL_GUIDE.md  README_IMPROVEMENTS.md  START_HERE.md  THEME_USAGE_GUIDE.md  UX_IMPROVEMENTS.md  commitlint.config.js  eslint.config.mjs  next.config.ts  openapi.json  orval.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts  smoke.spec.ts
frontend/messages/: en.json  fr.json
frontend/public/: sw.js
frontend/src/: middleware.ts
huggingface-space/: .env.example  .gitignore  Dockerfile  README.md  app.py  requirements.txt
is-a-dev-config/: README.md  _vercel.parissportif.json  parissportif.json
mobile/: App.tsx  app.json  package-lock.json  package.json
scripts/: backup-database.sh  restore-database.sh  sync-openapi.sh  train_ml_models.py
(+504 files in other folders)
