[project]
name = "paris-sportif-backend"
version = "0.1.0"
description = "Backend API for Paris Sportif - Football Betting Prediction App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "psycopg2-binary>=2.9.0", # PostgreSQL driver for sync operations
    # HTTP Client
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    # ML & Data Science
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    # LLM
    "anthropic>=0.40.0",
    "groq>=0.4.0",
    # Vector DB (RAG)
    "qdrant-client>=1.12.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    # Authentication (Supabase JWT)
    "python-jose[cryptography]>=3.3.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.0.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    "pytest>=9.0.2",
    "optuna>=4.7.0",
    # Push Notifications
    "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Pydantic models must match external API field names (camelCase)
"src/data/sources/football_data.py" = ["N815"]
# LLM prompts and database functions have long lines
"src/llm/prompts*.py" = ["E501"]
"src/llm/tasks/*.py" = ["E501"]
"src/llm/adjustments.py" = ["E501"]
"src/data/database.py" = ["E501"]
"src/prediction_engine/models/*.py" = ["E501", "N803"]  # X, X_train are ML conventions
"src/prediction_engine/ensemble*.py" = ["E501"]
"src/prediction_engine/model_trainer.py" = ["E501", "N803", "N806"]
"src/prediction_engine/examples.py" = ["E501", "N806"]
"src/ml/*.py" = ["E501", "N803", "N806"]  # ML uses X, X_train, X_val conventions
"src/api/routes/sync.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
